fix: update mask-image for resize grip icon to improve visibility

--- a/src/styles/icons.module.scss
+++ b/src/styles/icons.module.scss
@@ -456,8 +456,8 @@
   }
 
   &--resize-grip {
-    mask-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cline%20x1%3D%2214.3536%22%20y1%3D%229.35355%22%20x2%3D%229.35355%22%20y2%3D%2214.3536%22%20stroke%3D%22black%22%2F%3E%0A%3Cline%20x1%3D%2214.3536%22%20y1%3D%223.35355%22%20x2%3D%223.35355%22%20y2%3D%2214.3536%22%20stroke%3D%22black%22%2F%3E%0A%3C%2Fsvg%3E%0A');
-    -webkit-mask-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cline%20x1%3D%2214.3536%22%20y1%3D%229.35355%22%20x2%3D%229.35355%22%20y2%3D%2214.3536%22%20stroke%3D%22black%22%2F%3E%0A%3Cline%20x1%3D%2214.3536%22%20y1%3D%223.35355%22%20x2%3D%223.35355%22%20y2%3D%2214.3536%22%20stroke%3D%22black%22%2F%3E%0A%3C%2Fsvg%3E%0A');
+    mask-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='30.3536' y1='25.3536' x2='25.3536' y2='30.3536' stroke='black' stroke-opacity='0.898'/%3E%3Cline x1='30.3536' y1='19.3536' x2='19.3536' y2='30.3536' stroke='black' stroke-opacity='0.898'/%3E%3C/svg%3E%0A");
+    -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='30.3536' y1='25.3536' x2='25.3536' y2='30.3536' stroke='black' stroke-opacity='0.898'/%3E%3Cline x1='30.3536' y1='19.3536' x2='19.3536' y2='30.3536' stroke='black' stroke-opacity='0.898'/%3E%3C/svg%3E%0A");
   }
 
   &--caret {
